--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://birthday-api.up.railway.app/$1" }
+    { "source": "/api/(.*)", "destination": "https://birthday-webapp-production.up.railway.app/$1" }
   ]
 }
