--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://birthday-webapp-2025-backend-production.up.railway.app/$1" }
+    { "source": "/api/(.*)", "destination": "https://birthday-webapp-2025-backend-production.up.railway.app/$1" },
+    { "source": "/admin", "destination": "/admin.html" }
   ]
 }
