Update API base URL in admin panel and RSVP form for consistency

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://https://birthday-webapp-2025-backend.onrender.com/$1" },
+    { "source": "/api/(.*)", "destination": "https://estesi-production.up.railway.app/$1" },
     { "source": "/admin", "destination": "/admin.html" }
   ]
 }
